- Add Items ParticelGrayHueShadow Colord Dialog
- Add Checkbox ParticelGrey
- Add Items Rhombus
- Add Items Grid Image
- Add Items Grid Color
- Add Items Copy Clipboard - DetailPictureBox
- Light class completely revised
- Added size to light to scale the size of the light image
- Add Landtiles Zoom Form
- Add Texture editor for tiles incorporated into the textures.

Version : 4.12.0 #XG1
- Update to net8.
- Add Custom Sound Gumps Button
- Add Alarmclock Snooze Timer 5 min
- Gump - Instant search and focus with ‘Enter
- Gump Pagedown and PageUp
- Add Animation Html
- Add Icons ToolStripComboBox1 Stairs
- Gump ID Calculator and Buttons
- Add Animation Checkbox Free IDs Color Blue

Version : 4.11.26 #XG1
- Add Map Tools
- Added XML debugging hexcode
- Add Create Art and Artidx Mul tool Texture Tiledata
- Load Menu : Saves the last selected profile, reselecting it upon startup
- Search Animation

Version : 4.11.25 #XG1
- New feature added: Names outsourced to Gumps and stored in an XML file, with custom formatting and editing based on ID.
- Search function adjusted to include names as well.
- Added sound button and disabled messages
- Gumps Added a tagging function for IDs in the Gumps.
- Add a Scréenshoot Button Main Contextmenu
- Octokit 9.0.0
- Serilog 3.1.1
- System Resources Extension 8.00
- Microsoft Web WebView2 1.0.2151
- Button Binary Code
- Button Morse Code
- Calendar
- Added zoom function in the tildedata -> Items

Version : 4.11.24 #XG1
- Added ItemControl a Built-in image swap function
- Added a notepad that saves information into an XML file, serving as a reminder that can be edited later.
- Added a Notes form in the main menu to display messages.
- Added a Animtionen Edit
- Octokit 8.1.1
- Discord Link fixed
- Added Main Images 5 New
- Incorporated mirror function for the context, allowing for individual image loading and bulk image loading.
- Added a Gump Edit new System.

Version : 4.11.23 #XG1