@@ -19,6 +19,7 @@ Version : 4.12.1
 - Added size to light to scale the size of the light image
 - Add Landtiles Zoom Form
 - Add Texture editor for tiles incorporated into the textures.
+- Add Picture Preview
 
 Version : 4.12.0
 - Update to net8.
